<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">gUAntanamo</string>
    
    <string name="all">All</string>
    <string name="cancel">Cancel</string>
    <string name="catchup">Catchup</string>
    <string name="folder">Folder</string>
    <string name="no_folders">No folders</string>
    <string name="no_messages">No messages</string>
    <string name="ok">OK</string>
    <string name="page">Page</string>
    <string name="password">Password</string>
    <string name="post">Post</string>
    <string name="refresh">Refresh</string>
    <string name="reply">Reply</string>
    <string name="settings">Settings</string>
    <string name="subscribed">Subscribed</string>
    <string name="unread">Unread</string>
    <string name="url">URL</string>
    <string name="username">Username</string>
    <string name="save">Save</string>
    <string name="saves">Saves</string>
    <string name="send">Send</string>
    <string name="threads">Thread List</string>
    <string name="messages">Message List</string>
</resources>
